--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,73 @@
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  gap: 25px;
 }
 
-.red {
+.event_card {
+  border: 2px solid black;
+
+  min-width: 200px;
+
+  padding: 20px;
+}
+
+.event_name {
+  margin: 0;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pag_div {
+  margin-bottom: 20px;
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.part_card {
+  border: 2px solid black;
+
+  min-width: 200px;
+
+  padding: 20px;
+}
+
+.form_frame {
+  border: 2px solid black;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.error {
   color: red;
+}
+
+.seed_form {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter_form {
+  display: flex;
+  gap: 20px;
+}
+
+.field {
+  height: 19px;
+}
+
+.up_menu {
+  display: flex;
+  gap: 50px;
 }
